# recipe_keeper

./: .env  .gitignore  .watchignore  Cargo.toml  README.md  RecipeKeeper.db3  RecipeKeeper.db3-shm  RecipeKeeper.db3-wal  Rocket.toml  build.rs  docker-compose.yml  dockerfile
.github/workflows/: release.yml
.sqlx/: query-10c54df4d32adeb8053206033b8b79072c9710b0190bb4c0b6b2661fbbeee3ef.json  query-1895b8bbc505904b7d8bd4bf17bb64b10e2c89dd1cba13284c5855867949f426.json  query-1ab4c8b260839255f59908c8b5bb5def0c681fce1c88fc66268ef662fb27a4e5.json  query-2a83eb271726496a4847c4f072f0404babdd1784472f004c17f480ff70143a1c.json  query-868828f28ccbd4b83bb8a8f56e6e5b2a04182b16b25845a0465f64a85222bc98.json  query-86ad45a2e1450691f80a669f5548b42ea4bf2332c699cd3726b126c2e47568d0.json  query-875ce074c523e75b84199c5d86aaee597a8df3c5b4d883cc3721338ef292faaf.json  query-8979607c041c6e0cd48a5c607b17f24722c51bd2b052dd12376f328c423455d4.json  query-91bdaf217f463f0768b6689b39834312bdbec16b44ccef1e4ef2a5d0cc1a232c.json  query-982c4e9a145f7aa98a0592d4341b999ac2a8dea593ccab3eddad53a6ca0b386f.json  query-b267dd449c8ca78d097e0df6e864145321837ab28a1cf2e104cd2a8abcb77b1a.json  query-bbd8bca6d5ecdb0bb91c11e9eb230a00c721fb3c458cc27a4584f79d251fbb20.json  query-bdb2be10ed393a1fce4610e241d7f45f79a0469b7580e4fe920799addfd194f9.json  query-deed297b2f4bdbf7d86fca8fcf343815b2e717ab6cea2be60594a13d1687129d.json  query-e5a7dc9e993b418c725bb00bcbf0577916ab6a655a9c61a091b1bd1cb1494ff7.json
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: app.tsx  (+2 more)
migrations/: 20250306031529_create_tables.sql
src/: handlers.rs  main.rs  models.rs  query_utils.rs
(+12 files in other folders)
