[package]
name = "recipe_keeper"
version = "1.0.1"
edition = "2024"
authors = ["Jake Hathaway <jake.d.hathaway@gmail.com>"]

[dependencies]
rocket = { version = "0.5.1", features = ["json", "serde_json"] }
rocket_db_pools = { version = "0.2.0", features = [
    "sqlx_macros",
    "sqlx_sqlite",
] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["macros", "migrate"]
