[package]
name = "recipe_keeper"
version = "1.0.6"
edition = "2024"
authors = ["Jake Hathaway <jake.d.hathaway@gmail.com>"]

[dependencies]
axum = { version = "0.8", features = ["macros"] }
dotenvy = "0.15.7"
mime_guess = "2.0.5"
rust-embed = { version = "8", features = ["axum"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = "0.6.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["sqlite", "runtime-tokio", "macros", "migrate"]
